# mm

./: .gitignore  README.md  Untitled Document 1
debugger/: callgrind.out.  callgrind.out.454907  callgrind.out.507788  leaky  leaky.c  op2kgl.py  out.dot
debugger/oprofile_data/samples/current/{root}/home/octobotics/Desktop/Working/memory_management/mm/debugger/leaky/{dep}/{root}/proc/kallsyms/: CPU_CLK_UNHALTED.750000.0.all.all.all
doc/: Makefile  garbage_collection.cpp  garbage_collector.md  get_heap.cpp  links.txt  my_alloc.md  myalloc.cpp  myalloc_original_heap.cpp  readme.md  swap_pointer.cpp
doc/project/: alloc_test  ds.hpp  main  main.cpp  my_alloc.cpp  my_alloc.hpp  my_stack.h  my_vector.h  test_basic.cpp  test_basic_gtest
mmap/: a.out  file1.txt  main.cpp  read  read_file.cpp  readme.md
mmap/example/include/: mmap.hpp
mmap/example/src/: main.cpp
my_alloc/: CMakeLists.txt  readme.md
my_alloc/cmake/: myallocConfig.cmake.in  readme.md
my_alloc/doc/: reserch.md  system_call.md
my_alloc/examples/: CMakeLists.txt  main.cpp
my_alloc/examples/include/: ds.hpp  my_hash.h  my_queue.h  my_stack.h  my_vector.h
my_alloc/examples/src/: dynamic_allocation.cpp  hash.cpp  main.cpp  queue.cpp  stack.cpp  vector.cpp
my_alloc/examples/test/: my_hash.h  my_queue.h
my_alloc/include/: my_alloc.hpp
my_alloc/install/lib/: libmyalloc.so.1
my_alloc/install/lib/cmake/myalloc/: myallocConfig.cmake  myallocTargets-noconfig.cmake  myallocTargets.cmake
my_alloc/install/lib/my_alloc/cmake/: myallocConfig.cmake  myallocTargets-noconfig.cmake  myallocTargets.cmake
my_alloc/install/lib/my_alloc/lib/: libmyalloc.so.1.0
my_alloc/src/: main.cpp  my_alloc.cpp  swap_pointer.cpp
my_alloc/test/: readme.md  test.txt  unit_test.cpp
shared_memory/: a.out  continiou_moniter_sm.cpp  readme.md  receiver.cpp  semaphrose.cpp  sender.cpp
